# simple-rule34-api

./: pyproject.toml
src/SimpleRule34/: __init__.py  exceptions.py  main.py  types.py  utils.py
