[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_rule34"
version = "1.0.0.1"
authors = [
  { name="StarMan12", email="author@example.com" },
]
description = "Simple api wrapper of rule34.xxx for python with asynchronous support"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'aiofiles~=25.1.0',
    'aiohttp~=3.12.15',
    'pydantic~=2.12.5'
]

[project.urls]
"Homepage" = "https://github.com/SyperAlexKomp/simple-rule34-api"
"Bug Tracker" = "https://github.com/SyperAlexKomp/simple-rule34-api/issues"